--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ chardet==3.0.4
 constantly==15.1.0
 cryptography==2.8
 cssselect==1.1.0
+fuzzywuzzy==0.17.0
 gspread==3.1.0
 httplib2==0.14.0
 hyperlink==19.0.0
